# learning-python

./: .env.example  .gitattributes  .gitignore  README.md  main.py  package.json  pyproject.toml  requirements.txt
blog/: admin.py  context_processors.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_resource.py  0003_alter_lesson_difficulty.py  0004_alter_resource_resource_type.py
blog/static/admin/css/: markdownx_fix.css
blog/static/blog/css/: main.css  output.css
blog/static/blog/css/src/: input.css
blog/templates/blog/: about.html  base.html  home.html  lesson_detail.html  lesson_list.html  resources.html
blog/templates/blog/components/: footer.html  lesson_card.html  navbar.html
blog/templatetags/: markdown_extras.py
config/: settings.py  urls.py
